--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -16,7 +16,7 @@ body{
     width: 100%;
     top:0;
     z-index: -1;
-    background-image: url("../html/images/tennis.jpg");
+    background: url("../images/tennis.jpg");
     filter: blur(20px);
     height: 100%;
     background-size: cover;
@@ -36,8 +36,14 @@ h1{
 .button{
     display: flex;
     justify-content: center;
-    font-size: 1.5rem;
     width: 100%;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+}
+.button-link{
+    color: black;
+    text-decoration: none;
 }
 footer{
     display: flex;
