--- a/src/main/webapp/css/match-score.css
+++ b/src/main/webapp/css/match-score.css
@@ -72,6 +72,17 @@ form{
     gap:10px;
     margin-left: -10%;
 }
+.advantage{
+    width: 3%;
+    height: 5vh;
+    background-color: transparent;
+    border-radius: 50%;
+    margin: 20px;
+}
+.active{
+    display: block;
+    background-color: red;
+}
 button{
     height: 30px;
     width: 50%;
