--- a/src/main/webapp/css/new-match.css
+++ b/src/main/webapp/css/new-match.css
@@ -15,10 +15,20 @@ header{
     height: 15%;
     justify-content: center;
     align-items: center;
+    
     p{
         font-size: 2rem;
     }
+    a{
+        display: block;
+        position: absolute;
+        left: 10px;
+        top:10px;
+        text-decoration: none;
+        color: rgb(33, 102, 143);
+    }
 }
+
 
 footer{
     display: flex;
