--- a/src/main/webapp/css/match-score.css
+++ b/src/main/webapp/css/match-score.css
@@ -44,6 +44,9 @@ main{
     justify-items: center;
     align-items: center;
     width: 100%;
+    h1{
+        margin-left: 40%;
+    }
 }
 .scores{
     display: flex;
