--- a/src/main/webapp/css/matches.css
+++ b/src/main/webapp/css/matches.css
@@ -39,6 +39,11 @@ header{
 
 main{
     padding-top:3%;
+    p{
+        margin-top: 5%;
+        margin-left: 40%;
+        font-size: 1.5rem;
+    }
 }
 
 form{
